fix: small logo only on desktop collapsed view

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -21,6 +21,7 @@
 
       .logo {
         width: 1.4375rem;
+        content: url("/icons/logo-small.svg");
       }
     }
   }
